# sprq-nx-planner

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  docker-compose.dev.yml  docker-compose.yml  revio-nx-planner.html
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.lock.txt
backend/alembic/: env.py
backend/alembic/versions/: a1f4c9d2b7e3_grid_scheduler_redesign.py  a9c1e7f4b6d2_cell_discard_fields.py  b2d6e9a4c1f7_cell_trays.py  b8d1f3a5c7e9_drop_container_id_and_oplc.py  c4ce50a58b19_seed_instruments.py  c7f3a1e9d5b2_cell_home_well.py  d3e8a1c9f2b4_sample_import_fields.py  e6a2d4b8f1c3_cell_qc_and_credit_fields.py  f2a7c9e1d4b6_cycle_run_name.py  f7bfcca3435c_initial_schema.py
backend/app/: config.py  db.py  main.py  serializers.py  timeutil.py
backend/app/api/: admin.py  audit.py  auto_fill.py  batch_sheet.py  cell_uses.py  cells.py  cycles.py  deps.py  imports.py  instruments.py  samples.py  schedule.py  schedule_export.py  schedules.py  stats.py
backend/app/engine/: constants.py  csv_parse.py  import_fields.py  kpis.py  normalize.py  packing.py  scheduler_import.py  scheduling.py  slot_scheduling.py  tracker_columns.py  tracker_import.py  types.py
backend/app/models/: __init__.py  audit.py  cell.py  cell_tray.py  importing.py  instrument.py  sample.py  schedule.py
backend/app/schemas/: audit.py  batch_sheet.py  cell.py  importing.py  instrument.py  run.py  sample.py  schedule.py  stats.py
backend/scripts/: migrate_sqlite_to_postgres.py
backend/tests/: conftest.py
docs/: todo.md  (+1 more)
(+293 files in other folders)
